--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
       - '3307:3306'
     volumes:
       - mysql:/var/lib/mysql
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
 volumes:
   mysql:
     driver: local
